# 131-web

./: Makefile  README.md  TODO.md  assignments.md  calendar.md  contact.md  grades.md  index.md  lectures.md  links.md  orig-index.html  rjsite.hs  site.hs  stack.yaml
assignments/: hw0.markdown
docs/: assignments.html  calendar.html  contact.html  grades.html  index.html  lectures.html  links.html  orig-index.html
docs/assignments/: hw0.html  hw1.html
docs/lectures/: 01-introduction.html  02-haskell.html  03-adder.html  04-boa.html  05-cobra.html  06-diamond.html  07-egg-eater.html  08-fer-de-lance.html  08-fox.html  09-garter.html
docs/static/hs/: CrashCourse.hs  lec-1-17-2018.hs
docs/static/hw/: 00-warmup.tgz
docs/static/img/: groups.txt
homeworks/00-warmup/: Makefile  hw0-warmup.cabal
homeworks/00-warmup/lib/: Hw0.hs
homeworks/00-warmup/tests/: Test.hs
homeworks/01-adder/: Makefile  README.md  adder.cabal
homeworks/01-adder/c-bits/: main.c
homeworks/01-adder/lib/Language/Adder/: Asm.hs  Compiler.hs  Parser.hs  Types.hs  UX.hs  Utils.hs
homeworks/01-adder/tests/: Test.hs
homeworks/01-adder/tests/input/: README.md  lets-unb.adder
homeworks/01-adder/tests/output/: README.md
homeworks/02-boa/: Makefile  README.md  boa.cabal
homeworks/02-boa/lib/Language/Boa/: Asm.hs  Compiler.hs  Normalizer.hs  Parser.hs  Types.hs  UX.hs  Utils.hs
homeworks/02-boa/tests/: Test.hs
homeworks/02-boa/tests/input/: expr2.boa  expr3.boa  expr4.boa  if1.boa
homeworks/02-boa/tests/output/: README.md
homeworks/03-cobra/: Makefile  README.md  cobra.cabal
homeworks/03-cobra/c-bits/: main.c
homeworks/03-cobra/lib/Language/Cobra/: Asm.hs  Compiler.hs  Normalizer.hs  Parser.hs  Types.hs  UX.hs  Utils.hs
homeworks/03-cobra/tests/: Test.hs
homeworks/03-cobra/tests/input/: dyn1.cobra  dyn2.cobra  print4.cobra  tmp.cobra
homeworks/04-diamondback/: Makefile  README.md  diamondback.cabal
homeworks/04-diamondback/c-bits/: main.c
homeworks/04-diamondback/lib/Language/Diamondback/: Asm.hs  Checker.hs  Compiler.hs  Label.hs  Normalizer.hs  Parser.hs  Types.hs  UX.hs  Utils.hs
homeworks/04-diamondback/tests/: Test.hs
homeworks/04-diamondback/tests/input/: abs.diamond  add2.diamond  dyn0.diamond  err-arity.diamond  err-fac.diamond  err-large-00.diamond  err-large-01.diamond  err-not-defined.diamond  err-unbound-00.diamond  err-unbound-01.diamond  even.diamond  expr2.diamond  fac-tr.diamond  fac.diamond  fib.diamond  incr.diamond  sumTo.diamond  tmp.diamond
lectures/: 01-introduction.md  02-haskell.md  03-adder.md  04-boa.md  05-cobra.md  06-diamond.md  07-egg-eater.md  08-fer-de-lance.md  08-fox.md  09-garter.md
static/hs/: CrashCourse.hs
static/hw/: 00-warmup.tgz
static/img/: groups.txt
templates/: footer.html  nav.html
